--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,6 +14,12 @@ input {
 
   /* margin: auto; */
 }
+.food {
+  height: 300px;
+  margin: 5px;
+  width: 400px;
+  border: 2px solid black;
+}
 
 button {
   width: 200px;
